--- a/src/python/Makefile
+++ b/src/python/Makefile
@@ -1,4 +1,9 @@
+include ../../Makefile.global
+
 # Install the package locally for development
 
 install:
-	pip install --upgrade ./crankshaft
+	pip install --upgrade ./observatory
+
+test:
+	#TODO noop
