--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,11 @@
-language: c
-group: travis_stable
+language: generic
 sudo: required
-
 env:
-  global:
-    - PAGER=cat
-
-matrix:
-  include:
-    - env: PGSQL_VERSION=9.6 POSTGIS_VERSION=2.3
-    - env: PGSQL_VERSION=10 POSTGIS_VERSION=2.4
-
-before_install:
-  - sudo bash $TRAVIS_BUILD_DIR/scripts/ci/install_postgres.sh
-  - sudo make clean-all
-
-install:
-  - sudo make install
-
+  matrix:
+    - DOCKER_IMAGE=carto/postgresql10:latest
+    - DOCKER_IMAGE=carto/postgresql11:latest
+services:
+  - docker
+before_install: docker pull ${DOCKER_IMAGE}
 script:
-  - cd src/pg
-  - make test || { cat $TRAVIS_BUILD_DIR/src/pg/test/regression.diffs; false; }
+  - ./scripts/ci/docker-test.sh ${DOCKER_IMAGE}
